# agentic-financial-risk-assistant

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  PROJECT_LOG.md  README.md  TODO.md  docker-compose.yml  encode_gifs.py  pyproject.toml  record_demo.py  record_demo01_mp4.py  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
app/components/: charts.py  risk_summary.py  sidebar.py
data/: README.md
data/raw/: brent_crude_sample.csv  equinor_stock_sample.csv  sp500_sample.csv  usd_nok_sample.csv  vix_sample.csv
deployment/azure/: aks_extension_note.md  architecture_azure.md  azure_cli_commands.sh  deploy_container_apps.md
deployment/kubernetes/: README.md  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
docs/: architecture.md  eu_ai_act_mapping.md  mcp_architecture.md  responsible_ai.md  risk_methodology.md
evaluation/: evaluation_questions.csv  evaluation_results.md  failure_modes.md
reports/: project_summary.md  technical_report.md
src/agent/: langchain_agent.py  prompts.py  safety.py  tools.py
src/data/: loaders.py  sample_data.py  validators.py
src/mcp/: resources.py  server.py  tools.py
src/rag/: documents.py  ingest.py  retriever.py
src/risk/: drawdown.py  returns.py  rolling.py  var.py  volatility.py
tests/: test_data_validation.py  test_drawdown.py  test_eu_ai_act_mapping.py  test_langchain_agent.py  test_mcp_tools.py  test_returns.py  test_safety.py  test_var.py  test_volatility.py
