[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-financial-risk-assistant"
version = "0.1.0"
description = "Production-style agentic AI prototype for financial risk and uncertainty analysis"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
